--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/enmalafeev/backend-project-lvl3#readme",
   "dependencies": {
     "axios": "^0.20.0",
+    "commander": "^6.1.0",
     "debug": "^4.2.0",
     "lodash": "^4.17.20"
   },
