refactor main.test.js need fix

--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Hexlet project check
+      - name: backend-project-lvl3
         uses: hexlet/project-action@release
