--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "cheerio": "^1.0.0-rc.3",
     "commander": "^6.1.0",
     "debug": "^4.2.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "prettier": "^2.2.0"
   },
   "devDependencies": {
     "@jest/globals": "^26.4.2",
